add null wrapperspb support and mockery upgrade
